Making callbacks easier to work with. Fixing some small exceptions